Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48809

qmlplugindump does not generate type information about QML components in Qt resource files

    XMLWordPrintable

Details

    Description

      qmlplugindump only generates information about QML components that exist as files. It does not generate type information for components embedded in Qt resource files and exposed in the qmldir via qrc urls.

      For example, for the following qmldir file:
      module com.mycompany.qmlcomponents
      plugin QmlLib .
      typeinfo plugins.qmltypes
      MyQmlItem 1.0 MyQmlItem.qml
      MyQmlQrcItem 1.0 qrc:/MyQmlQrcItem.qml

      Type info would be generated for MyQmlItem but not MyQmlQrcItem. This basically breaks autocomplete in Qt Creator for this situation.

      Please find a project that reproduces the issue attached.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            molesmoke Jeremy Powell
            Votes:
            5 Vote for this issue
            Watchers:
            11 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes