Print a warning when encountering a non-relative URL in a qmldir file

This is not supported because supporting it would encourage users to
create components that won't work on other systems or that will confuse
qmlplugindump. QML still parses and loads those components, but you
should really use relative paths.

Task-number: QTBUG-48809
Change-Id: I9c81671cb5c4ea59b8c884ff24ad02e82047e9d6
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>